--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/KKambi/membership-login#readme",
   "dependencies": {
     "consolidate": "^0.15.1",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "geckodriver": "^1.16.2",
+    "selenium-webdriver": "^4.0.0-alpha.4"
   }
 }
